# hello-llm

./: .gitignore  Cargo.toml
hello/: Cargo.toml
hello/src/: cli.rs  context.rs  main.rs  request.rs  term.rs
hello/src/request/: predefined_prompts.rs
hello/src/term/: output_metadata_gen.rs  str_ext.rs
llm_int/: Cargo.toml
llm_int/src/: lib.rs
llm_int/src/openai/: chat_completion_api.rs  mod.rs
