[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
llm_int = {path = "../llm_int"}
crossterm = "0.29.0"
unicode-width = "0.2.0"
serde_json = "1.0.140"
curl = "0.4.47"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
opt-level="z"
lto=true
strip=true
codegen-units=1
